# Serasa_tests

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt  setup.bat
.github/workflows/: ci.yml
pages/: base_page.py  login_page.py
tests/api/: test_public_endpoints.py  test_session_contract.py
tests/e2e/: test_login_smoke.py  test_login_validation.py
utils/: assertions.py
