[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "serasa-playwright-pom"
version = "0.2.0"
description = "E2E e API tests for Serasa login using Pytest + Playwright + POM"
requires-python = ">=3.11"
dependencies = [
  "pytest>=8.0.0",
  "playwright>=1.45.0",
  "pytest-playwright>=0.5.2",
  "requests>=2.32.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
]

[tool.pytest.ini_options]
addopts = "--headed --disable-warnings"
testpaths = ["tests"]
markers = [
  "e2e: browser tests",
  "api: api tests",
  "smoke: smoke tests",
]
